Worked on mobile UI fixes

--- a/frontend/src/components/Navbar/Header.css
+++ b/frontend/src/components/Navbar/Header.css
@@ -50,7 +50,7 @@
 
 .toggle-drawer .MuiDrawer-paper {
     width: 100%;
-    padding: 2rem;
+    padding: 3rem 2rem 2rem 2rem;
     box-sizing: border-box;
 }
 
