--- a/frontend/src/pages/pageStyle/Home.scss
+++ b/frontend/src/pages/pageStyle/Home.scss
@@ -156,11 +156,12 @@
         border-radius:207px;
     }
 
-    .hero_image{
-        width:429px;
-        height:314px;
-        border-radius:207px;
+    .hero_image {
+        width: 100%;
+        height: 264px;
+        border-radius: 207px;
         margin: 20px 0 0 0;
+        object-fit: cover;
     }
     .choice-accordion {
         margin: 8px 20px !important;
